--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webxdc-rainbow",
+  "name": "webxdc-snake",
   "version": "1.0.0",
-  "description": "Colour Picker Game for Delta Chat",
+  "description": "Snake Game for Delta Chat",
   "main": "index.js",
   "scripts": {
     "dev": "vite --host --open",
@@ -13,14 +13,9 @@
   "author": "M4ss1ck",
   "license": "0BSD",
   "dependencies": {
-    "@vitejs/plugin-react": "^1.3.1",
-    "query-string": "^7.1.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
     "vite": "^2.9.5"
   },
   "devDependencies": {
-    "@ffflorian/jszip-cli": "^3.1.6",
-    "sass": "^1.50.1"
+    "@ffflorian/jszip-cli": "^3.1.6"
   }
 }
