--- a/.jsziprc.json
+++ b/.jsziprc.json
@@ -5,7 +5,7 @@
   "force": true,
   "ignoreEntries": ["*.map"],
   "mode": "add",
-  "outputEntry": "rainbow.xdc",
+  "outputEntry": "snake.xdc",
   "quiet": false,
   "verbose": false
 }
